--- a/310.md
+++ b/310.md
@@ -43,7 +43,7 @@
 
 在科学计算中，业界比较喜欢使用ipython notebook，前面已经安装。在shell中执行
 
-    ipython notebook --pylab=inline
+    ipython notebook --pylab=inline    （不能使用了，jupyter notebook）
     
 得到下图的界面，这是在浏览器中打开的：
 
